# adventofcode2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md  template_code.cpp
common/: utils.h
day_1/: CMakeLists.txt  day_1_modern.cpp  day_1_part_1.cpp  day_1_part_2.cpp  day_1_sol.cpp
day_10/: CMakeLists.txt  day_10.cpp  day_10_multithread.cpp
day_11/: CMakeLists.txt  day_11.cpp
day_12/: CMakeLists.txt  day_12.cpp  day_12_animation.cpp
day_2/: CMakeLists.txt  day_2.cpp
day_3/: CMakeLists.txt  day_3.cpp
day_4/: CMakeLists.txt  day_4_complete.cpp  day_4_part_1.cpp
day_5/: CMakeLists.txt  day_5.cpp
day_6/: CMakeLists.txt  day_6.cpp  p2.py
day_7/: CMakeLists.txt  day_7.cpp  day_7_animation.cpp  day_7_animation_old.cpp
day_8/: CMakeLists.txt  day_8.cpp
day_9/: CMakeLists.txt  Cargo.toml  day_9.cpp
day_9/src/: main.rs
